--- a/app/globals.css
+++ b/app/globals.css
@@ -7,7 +7,8 @@
 }
 
 body {
-  background: #08233b;
+ /* background: #08233b;*/
+  background: #1b151d;
   color: white;
   overscroll-behavior: none;
 
